--- a/layout/downloading.xml
+++ b/layout/downloading.xml
@@ -6,5 +6,5 @@
   android:orientation="vertical"
   android:id="@+id/layout"
   >
-  <TextView android:text="@string/downloading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:textSize="20sp" android:paddingTop="20sp"/>
+  <TextView android:text="@string/downloading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:textSize="20sp" />
 </LinearLayout>
