--- a/layout/adsense.xml
+++ b/layout/adsense.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/adsense_container" android:layout_height="fill_parent"
-	android:layout_width="fill_parent">
-	<com.google.ads.GoogleAdView android:id="@+id/adview"
-		android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerInParent="true" />
-</RelativeLayout>
+<com.google.ads.GoogleAdView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/adview" android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true"
+    android:layout_centerInParent="true" />
