--- a/layout/rom.xml
+++ b/layout/rom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent" android:layout_height="fill_parent"
-    android:orientation="vertical" android:layout_margin="2dp" android:id="@+id/root">
+    android:orientation="vertical" android:id="@+id/root">
     <Gallery android:id="@+id/gallery" android:layout_width="fill_parent" android:layout_height="120dp" android:spacing="-140dp" />
     <RatingBar android:id="@+id/rating" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:stepSize="1" />
     <ListView android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/comments" android:layout_weight="1" />
