--- a/layout/comment.xml
+++ b/layout/comment.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent" android:layout_height="wrap_content"
     android:orientation="vertical" android:padding="4dp">
     <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
-        <TextView android:id="@+id/nickname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:textSize="20sp" />
+        <TextView android:id="@+id/nickname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:textSize="20sp" android:textColor="@android:color/primary_text_dark" />
         <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1" />
         <RatingBar android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/rating" style='?android:attr/ratingBarStyleSmall' android:layout_gravity="center" />
     </LinearLayout>
