--- a/layout/developer_list_item.xml
+++ b/layout/developer_list_item.xml
@@ -11,8 +11,17 @@
         android:layout_height="wrap_content" android:textSize="22sp" android:textColor="@android:color/primary_text_dark" android:layout_marginLeft="2dp"  android:layout_marginRight="2dp" />
         <TextView android:id="@+id/summary" android:layout_width="fill_parent"
         android:layout_height="wrap_content" android:textSize="14sp" android:textColor="@android:color/secondary_text_dark" android:layout_marginLeft="2dp"  android:layout_marginRight="2dp" />
-        <RatingBar android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:id="@+id/rating" android:isIndicator="true" android:stepSize="1" style='?android:attr/ratingBarStyleSmall' />
+        <LinearLayout android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+            <RatingBar android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/rating"
+                android:isIndicator="true" android:stepSize="1"
+                style='?android:attr/ratingBarStyleSmall'
+                android:layout_gravity="center_vertical" />
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/downloads"
+                android:paddingLeft="8sp" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
