--- a/layout/nickname.xml
+++ b/layout/nickname.xml
@@ -15,7 +15,7 @@
          />
             
     <EditText
-        android:id="@+id/AlarmName"
+        android:id="@+id/nickname"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:scrollHorizontally="true"
