clockwork billing resource

--- a/layout/rom_list_item.xml
+++ b/layout/rom_list_item.xml
@@ -26,4 +26,5 @@
                 android:paddingLeft="8sp" />
         </LinearLayout>
     </LinearLayout>
+	<CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/checkbox" android:visibility="gone" android:focusable="false" android:focusableInTouchMode="false" android:layout_marginLeft="2dp" android:layout_marginRight="2dp" android:layout_gravity="center" />
 </LinearLayout>
