--- a/layout/activity_base.xml
+++ b/layout/activity_base.xml
@@ -3,6 +3,8 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent" android:orientation="vertical">
+  <LinearLayout android:layout_width="fill_parent"
+  android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/title_container" />
   <ListView android:id="@+id/listview"  android:layout_width="fill_parent"
   android:layout_height="fill_parent" android:layout_weight="1" />
   <FrameLayout android:id="@+id/ad" android:layout_width="wrap_content" android:layout_height="wrap_content" />
