--- a/layout/buy_title.xml
+++ b/layout/buy_title.xml
@@ -11,6 +11,7 @@
 		android:shadowDx="1"
 		android:shadowDy="1"
 		android:textSize="20sp"
+		android:padding="4dp"
 		android:textStyle="bold"
 		android:shadowColor="@android:color/darker_gray"
 		android:layout_height="wrap_content" />
