--- a/layout/whatsnew.xml
+++ b/layout/whatsnew.xml
@@ -1,9 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:orientation="horizontal"
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent">
-    <Button android:id="@+id/desksms" android:drawableLeft="@drawable/desksms" android:layout_width="fill_parent"
-  android:layout_height="wrap_content" android:text="@string/desksms_by_clockworkmod" android:layout_gravity="center" android:gravity="center" android:textSize="16sp" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+
+    <Button
+        android:id="@+id/desksms"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:drawableLeft="@drawable/desksms"
+        android:gravity="center"
+        android:text="@string/desksms_by_clockworkmod"
+        android:textSize="16sp" />
+    <Button
+        android:id="@+id/tether"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:drawableLeft="@drawable/tether"
+        android:gravity="center"
+        android:text="@string/tether_by_clockworkmod"
+        android:textSize="16sp" />
+
 </LinearLayout>
