--- a/layout/list_header.xml
+++ b/layout/list_header.xml
@@ -7,4 +7,6 @@
 	android:paddingTop="2dip"
 	android:paddingBottom="2dip"
 	android:paddingLeft="5dip"
-	style="?android:attr/listSeparatorTextViewStyle" />
+	style="?android:attr/listSeparatorTextViewStyle"
+	android:textColor="@color/list_header"
+	 />
