--- a/layout/activity_base.xml
+++ b/layout/activity_base.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent" android:orientation="vertical">
-  <LinearLayout android:layout_width="fill_parent"
-  android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/title_container" />
-  <ListView android:id="@+id/listview"  android:layout_width="fill_parent"
-  android:layout_height="fill_parent" android:layout_weight="1" />
-  <FrameLayout android:id="@+id/ad" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+
+    <LinearLayout
+        android:id="@+id/title_container"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" />
+
+    <ListView
+        android:id="@+id/listview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1" />
 </LinearLayout>
