--- a/layout/activity_base.xml
+++ b/layout/activity_base.xml
@@ -11,6 +11,8 @@
         android:orientation="vertical" />
 
     <ListView
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:id="@+id/listview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
