--- a/layout/list_header.xml
+++ b/layout/list_header.xml
@@ -1,12 +1,9 @@
-<!-- list_header.xml -->
-<TextView
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/list_header_title"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	android:paddingTop="2dip"
-	android:paddingBottom="2dip"
-	android:paddingLeft="5dip"
-	style="?android:attr/listSeparatorTextViewStyle"
-	android:textColor="@color/list_header"
-	 />
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/list_header_title"
+    style="?android:attr/listSeparatorTextViewStyle"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:paddingBottom="2dip"
+    android:paddingLeft="5dip"
+    android:paddingTop="2dip"
+    android:textColor="@color/list_header" />
