--- a/layout/rom_list_item.xml
+++ b/layout/rom_list_item.xml
@@ -1,33 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minHeight="64dp" android:layout_width="fill_parent"
-    android:layout_height="wrap_content" android:orientation="horizontal"
-    android:layout_margin="2dp">
-    <ImageView android:id="@+id/image" android:scaleType="fitCenter"
-    android:layout_width="48dp" android:layout_height="48dp"
-    android:layout_gravity="center_vertical" android:layout_margin="2dp" android:visibility="gone"></ImageView>
-    <LinearLayout android:layout_gravity="center_vertical"
-        android:layout_width="fill_parent" android:layout_height="wrap_content"
-        android:orientation="vertical" android:layout_weight="1">
-        <TextView android:id="@+id/title" android:layout_width="fill_parent"
-            android:layout_height="wrap_content" android:textSize="22sp"
-            android:textColor="@android:color/primary_text_dark"
-            android:layout_marginLeft="2dp" android:layout_marginRight="2dp" />
-        <TextView android:id="@+id/summary"
-            android:layout_width="fill_parent" android:layout_height="wrap_content"
-            android:textSize="14sp" android:textColor="@android:color/secondary_text_dark"
-            android:layout_marginLeft="2dp" android:layout_marginRight="2dp" />
-        <LinearLayout android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-            <RatingBar android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/rating"
-                android:isIndicator="true" android:stepSize="1"
-                style='?android:attr/ratingBarStyleSmall'
-                android:layout_gravity="center_vertical" />
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/downloads"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="2dp"
+    android:minHeight="64dp"
+    android:orientation="horizontal" >
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="2dp"
+        android:scaleType="fitCenter"
+        android:visibility="gone" >
+    </ImageView>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            style="@android:style/TextAppearance.DeviceDefault.Medium" />
+
+
+        <TextView
+            android:id="@+id/summary"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            style="@android:style/TextAppearance.DeviceDefault.Small" />
+
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" >
+
+            <RatingBar
+                android:id="@+id/rating"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:isIndicator="true"
+                android:stepSize="1" />
+
+            <TextView
+                android:id="@+id/downloads"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right|center_vertical"
                 android:paddingLeft="8sp" />
         </LinearLayout>
     </LinearLayout>
-	<CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/checkbox" android:visibility="gone" android:focusable="false" android:focusableInTouchMode="false" android:layout_marginLeft="2dp" android:layout_marginRight="2dp" android:layout_gravity="center" />
+
+    <CheckBox
+        android:id="@+id/checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:visibility="gone" />
+
 </LinearLayout>
