--- a/layout/rom.xml
+++ b/layout/rom.xml
@@ -57,6 +57,13 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/post_comment" />
+
+        <Button
+            android:id="@+id/changelog"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/changelog" />
     </LinearLayout>
 
 </LinearLayout>
