--- a/layout/list_item_small.xml
+++ b/layout/list_item_small.xml
@@ -25,13 +25,15 @@
             android:id="@+id/title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            style="@android:style/TextAppearance.DeviceDefault.Medium" />
+            android:textColor="@android:color/primary_text_dark"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/summary"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            style="@android:style/TextAppearance.DeviceDefault.Small" />
+            android:textColor="@android:color/secondary_text_dark"
+            android:textSize="12sp" />
     </LinearLayout>
 
     <CheckBox
